# scutclient

./: .gitignore  CMakeLists.txt  Makefile  Makefile--OpenWrt  Makefile.am  Makefile.in  README.md  Readme.md  Readme.txt  config.h.in  config.h.in~  configure  configure.ac  configure.in  configure.scan  libpcap.a--ar71xx
.deps/: auth.Po  digital.Po  functions.Po  inode.Po  main.Po  young.Po
.github/workflows/: build.yaml  build.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
config/: 95-scutclient  init.d  scutclient
luci/: controller-scutclient.lua  model-scutclient.lua  view-logs.htm  view-status.htm
m4/: aclocal.m4
openwrt/: Makefile
openwrt/files/: scutclient.config  scutclient.init
src/: auth.c  auth.h  digital.c  drcom.c  drcom.h  functions.c  functions.h  info.c  info.h  inode.c  main.c  md5.c  md5.h  tracelog.c  tracelog.h  young.c  young.h
