AUTOMAKE_OPTIONS=foreign subdir-objects  #只检测必要文件
bin_PROGRAMS=scutclient #指定所要产生的可执行文件的文件名
#指定产生“scutclient”时所需要的源代码和头文件
scutclient_SOURCES=\
		src/main.c \
		src/auth.c \
		src/functions.c \
		src/info.c \
		src/drcom.c \
		src/tracelog.c \
		src/md5.c \
		src/auth.h \
		src/functions.h \
		src/info.h \
		src/drcom.h \
		src/tracelog.h \
		src/md5.h
