#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])	
AC_INIT([scutclient],[1.0]) 
AM_INIT_AUTOMAKE([scutclient],[1.0]) 
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CC
#AC_SUBST(V_CCOPT)
#AC_SUBST(V_DEFS)
#AC_SUBST(V_GROUP)
#AC_SUBST(V_INCLS)
AC_SUBST(V_PCAPDEP)
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT8_T
AC_TYPE_UINT32_T
# Checks for library functions.
AC_CHECK_FUNCS([memset socket])
AC_CHECK_FUNCS([strtoul])
AC_OUTPUT(Makefile)
